--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
+    "start": "nodemon ./index.js -e"
   },
   "author": "Kiran",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.2.0",
-    "requests": "^0.3.0"
+    "knex": "^0.95.14",
+    "mysql": "^2.18.1",
+    "requests": "^0.3.0",
+    "sqlite3": "^5.0.2"
   }
 }
